добавила проект 1. Uber

--- a/1. Uber/index.html
+++ b/1. Uber/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UBER PARTNERS</title>
-    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="src/icons/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
     <!-- подключаем стили Bootstrap -->
-    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="src/css/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="src/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="src/css/style.min.css">
 </head>
 <body>
     <header>
@@ -38,7 +38,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-6 col-md-4 offset-md-1">
-                        <a href="#" class="subheader_logo"><img src="logo/Uber.png" alt="logo"></a>
+                        <a href="#" class="subheader_logo"><img src="src/logo/Uber.png" alt="logo"></a>
                         <div class="subheader_official">Официальный партнер Uber в Москве</div>
                     </div>
                     <div class="xs-hidden col-md-3 offset-md-1 col-xl-2 offset-xl-2">
@@ -79,7 +79,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_circle">
-                            <img src="../src/icons/Rectangle-1.png" alt="reason">
+                            <img src="src/icons/Rectangle-1.png" alt="reason">
                         </div>
                         <div class="reasons_descr">                            
                             <div class="reasons_subtitle">Никаких наличных, оплата происходитавтоматически</div>
@@ -91,7 +91,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_circle">
-                            <img src="../src/icons/Rectangle-5.png" alt="reason">
+                            <img src="src/icons/Rectangle-5.png" alt="reason">
                         </div>
                         <div class="reasons_descr">                            
                             <div class="reasons_subtitle">Высокий доход с гарантированнымивыплатами</div>
@@ -103,7 +103,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_circle">
-                            <img src="../src/icons/Rectangle-7.png" alt="reason">
+                            <img src="src/icons/Rectangle-7.png" alt="reason">
                         </div>
                         <div class="reasons_descr">                            
                             <div class="reasons_subtitle">Комфортное, прозрачное и простоеподключение</div>
@@ -115,7 +115,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_circle">
-                            <img src="../src/icons/Rectangle.png" alt="reason">
+                            <img src="src/icons/Rectangle.png" alt="reason">
                         </div>
                         <div class="reasons_descr">                            
                             <div class="reasons_subtitle">Круглосуточная поддержка</div>
@@ -127,7 +127,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_circle">
-                            <img src="../src/icons/Rectangle-4.png" alt="reason">
+                            <img src="src/icons/Rectangle-4.png" alt="reason">
                         </div>
                         <div class="reasons_descr">                            
                             <div class="reasons_subtitle">Комиссия 8% + БОНУСЫ</div>
@@ -139,7 +139,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_circle">
-                            <img src="../src/icons/Rectangle-2.png" alt="reason">
+                            <img src="src/icons/Rectangle-2.png" alt="reason">
                         </div>
                         <div class="reasons_descr">                            
                             <div class="reasons_subtitle">Работа в удобное время, никакихграфиков</div>
@@ -152,7 +152,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_circle">
-                            <img src="../src/icons/Rectangle-6.png" alt="reason">
+                            <img src="src/icons/Rectangle-6.png" alt="reason">
                         </div>
                         <div class="reasons_descr">                            
                             <div class="reasons_subtitle">Всегда большое количество заказов</div>
@@ -164,7 +164,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_circle">
-                            <img src="../src/icons/Rectangle-3.png" alt="reason">
+                            <img src="src/icons/Rectangle-3.png" alt="reason">
                         </div>
                         <div class="reasons_descr">                            
                             <div class="reasons_subtitle">Без шашечек и наклеек</div>
@@ -229,7 +229,7 @@
             <div class="label label_white">Возможности</div>
             <h2 class="title title_white hidden-320">Выбор - отличная штука!</h2>
             <div class="subtitle subtitle_white">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
-            <img src="img/car.png" alt="uber car" class="choice_img">
+            <img src="src/img/car.png" alt="uber car" class="choice_img">
             <div class="choice_descr">
                 Машины на каждый день.<br>
                 Лучше, быстрее и дешевле, чем такси
@@ -344,19 +344,19 @@
             <div>
                 <div class="footer_mobile">
                     <a href="#">
-                        <img src="img/app_store.png" alt="App Store">
+                        <img src="src/img/app_store.png" alt="App Store">
                     </a>
                     <a href="#">
-                        <img src="img/google_play.png" alt="Google play">
+                        <img src="src/img/google_play.png" alt="Google play">
                     </a>
                     <a href="#">
-                        <img src="img/windows_store.png" alt="Windows store">
+                        <img src="src/img/windows_store.png" alt="Windows store">
                     </a>
                 </div>
             </div>
         </div>
     </footer>
     
-    <script src="js/script.js"></script>
+    <script src="src/js/script.js"></script>
 </body>
 </html>
